--- a/src/components/Message/index.css
+++ b/src/components/Message/index.css
@@ -5,9 +5,8 @@
   padding-bottom: .3em;
   padding-left: 3%;
   margin-bottom: .5em;
-  /* border: 1px solid hsla(210, 50%, 75%, .2); */
   border-bottom: .5px solid hsla(0, 50%, 100%, .5);
-  color: #FFFFFF;
+  color: inherit;
 }
 
 .icon {
@@ -47,16 +46,18 @@
   flex-grow: 3;
 }
 
+.lightbox {
+  z-index: 3;
+  position: relative;
+}
+
+/* Create Message Styles */
+
 .createContainer {
   display: none;
   /* max-width: 600px; */
   width: 100%;
   height: 15%;
-}
-
-.lightbox {
-  z-index: 3;
-  position: relative;
 }
 
 .createBody {
@@ -79,14 +80,13 @@
   display: flex;
 }
 
-.MoreButton {
-  height: 2.5vh;
-}
+/* Container Styles */
 
 .messageList {
   /* max-width: 600px; */
   width: 100%;
-  height: 85%;
+  height: 100%;
+  padding-bottom: 20vh;
 }
 
 .messagesScrollContainer {
@@ -95,12 +95,14 @@
   height: 100%;
 }
 
-@media only screen and (min-width: 40em) {
-  .messagesScrollContainer {
-    height: 98vh;
-  }
+/* Media Queries */
 
+@media only screen and (min-width: 40em) {
   .createContainer {
     display: block;
+  }
+
+  .messageList {
+    padding: 0;
   }
 }
